--- a/layouts/repository/package.html
+++ b/layouts/repository/package.html
@@ -35,10 +35,14 @@
                                     <span class="pull-left">
                                     <!--<img class="package-icon img-responsive" aria-hidden="true" alt="{{ $p.Parent.LinkTitle }}"
                                         src="/res_repo/img/groupdocs{{ lower (replace (replace  $t.Parent.RelPermalink "/" "_") "_java_" "-for-java") }}.png" />-->
-                                     <!-- @am modified fix path for multilingual -->
-                                     <img class="package-icon img-responsive" aria-hidden="true" alt="{{ $p.Parent.LinkTitle }}"
-                                     src="/res_repo/img/aspose{{ lower (replace (replace  $t.Parent.RelPermalink "/" "_") "_java_" "-for-java") }}.png" />
-                                     <!-- /@am modified fix path for multilingual -->
+                                    {{ if $t.Page.IsTranslated }}
+                                      {{$lang := print "/" $t.Language.Params.languageCode}}
+                                         <img class="package-icon img-responsive" istran="{{$lang}}" farooq-id="{{$t.Parent.RelPermalink}}" aria-hidden="true" alt="{{ $p.Parent.LinkTitle }}"
+                                         src="/res_repo/img/aspose{{ lower (replace (replace (replace  $t.Parent.RelPermalink $lang "") "/" "_") "_java_" "-for-java") }}.png" />
+                                    {{ else }}
+                                         <img class="package-icon img-responsive" farooq-id="{{$t.Parent.RelPermalink}}" aria-hidden="true" alt="{{ $p.Parent.LinkTitle }}"
+                                         src="/res_repo/img/aspose{{ lower (replace (replace  $t.Parent.RelPermalink "/" "_") "_java_" "-for-java") }}.png" />
+                                    {{ end }}
                                     </span>
                                     <span class="title" tabindex="0">
                                     <a href="{{ $p.Parent.RelPermalink }}" title="{{$p.Parent.LinkTitle}}">
