Added fixes for CLS issues
Injected various CSS and HTML-based fixes for CLS problems.

--- a/layouts/partials/repository/repo-pagelayout.html
+++ b/layouts/partials/repository/repo-pagelayout.html
@@ -38,7 +38,7 @@
                                        src="/res_repo/img/groupdocs{{ lower (replace  (replace  $.context.RelPermalink "/" "_") "_java_" "-for-java") }}.png" />
                                     -->
                                     <!-- @am modified fix path for multilingual -->
-                                    <img class="package-icon img-responsive" aria-hidden="true" alt=""
+                                    <img class="package-icon img-responsive" aria-hidden="true" alt="Aspose" width="40px" height="40px"
                                        src="/res_repo/img/aspose{{ lower (replace  (replace  $.context.RelPermalink "/" "_") "_java_" "-for-java") }}.png" />
                                     <!-- @am /modified fix path for multilingual -->
                                     </span>
