Added more CLS fixes
Injected more updates to the Aspose.PDF for Java page theme for removing CLS issues.

--- a/layouts/partials/repository/repo-pagelayout.html
+++ b/layouts/partials/repository/repo-pagelayout.html
@@ -24,7 +24,7 @@
               {{ end }}
 
 
-<section role="main" class="main-container page-package-details">
+<section role="main" class="container main-container page-package-details">
         <div class="row">
 
           <div class="col-sm-9 package-details-main">
