Optimized HTML Layout for CLS & Page Speed Issues
Fixed the HTML structure by removing extra HTML elements and also optimized the styling resources in addition to deferring script files.

--- a/layouts/partials/repository/head-new.html
+++ b/layouts/partials/repository/head-new.html
@@ -152,7 +152,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
 
-<script src="/js/bundle.min.js"></script>
+<script src="/js/bundle.min.js" async></script>
 <script src="/js/dynabic.treeview.js"></script>
 <script src="/js/treeviewmanager.js"></script>
 
