--- a/themes/downloads-common-theme/layouts/partials/footer.html
+++ b/themes/downloads-common-theme/layouts/partials/footer.html
@@ -69,6 +69,6 @@
  <script type='text/javascript' language="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" async></script>
  <script src="/js/loadmore.min.js"></script>
  
- <script src="/js/bundle.min.js"></script>
+ <script src="/js/bundle.min.js" async></script>
  <script src="/js/dynabic.treeview.js" async></script>
  <script src="/js/treeviewmanager.js"></script>
