Injected Fixes for Page Performance and CLS
Added more changes to the page layout and styling resources as well as some other fixes to improve page performance of the Java releases theme.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -124,7 +124,7 @@
 
 {{else}}
 <link href="/css/bundle.min.css" rel="stylesheet" type="text/css" />
-<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" preload/>
 
 <link href="/css/navigation-minify.css" rel="stylesheet" type="text/css" />
 <link href="/css/Merriweather.css" rel="stylesheet" type="text/css" />
