--- a/layouts/partials/repository/repo-pagelayout.html
+++ b/layouts/partials/repository/repo-pagelayout.html
@@ -24,7 +24,7 @@
               {{ end }}
 
 
-<section role="main" class="main-container page-package-details">
+<!--<section role="main" class="main-container page-package-details">-->
         
 
           <!--<div class="package-details-main">-->
@@ -338,4 +338,4 @@ implementation group: '{{ .groupId }}', name: '{{ .artifactId }}', classifier: '
        {{ end }}
 
 -->
-          </section>
+          <!--</section>-->
