--- a/layouts/partials/repository/head-new.html
+++ b/layouts/partials/repository/head-new.html
@@ -124,7 +124,7 @@
 {{else}}
 
 
-<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" preload/>
 
 
 
