--- a/themes/downloads-common-theme/layouts/partials/head.html
+++ b/themes/downloads-common-theme/layouts/partials/head.html
@@ -124,7 +124,7 @@
 
 {{else}}
 <link href="/css/bundle.min.css" rel="stylesheet" type="text/css" />
-<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" preload/>
 
 <link href="/css/navigation-minify.css" rel="stylesheet" type="text/css" />
 <link href="/css/Merriweather.css" rel="stylesheet" type="text/css" />
