--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,4 @@
 <head id="Head1">
-
-
 {{ $CurrentSection :=.Site.Params.contentsection }}
 {{ $faviconfolder :=.Site.Params.faviconfolder }}
 {{$currentcontentpath := print $faviconfolder "/" $CurrentSection}}
@@ -19,6 +17,9 @@
 {{else}}
 <meta name="robots" content="index, follow">
 {{ end }}
+
+<link rel="canonical" href="{{ .Permalink | absURL }}" />
+{{ partial "alt-links.html" . }}
 
 {{$filepath := print "/images/" $faviconfolder "/favicon"}}
 {{$staticfilepath := print "static/images/" $faviconfolder "/favicon"}}
@@ -118,44 +119,27 @@
 {{ if .IsHome }}
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" type="text/css" />
 <link rel="stylesheet" href="/css/bootstrap-home.css" type="text/css" />
-
-
-
-{{else}}
-
-
-<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />
-
-
-
-<!--
 <link rel="stylesheet" href="/css/common.css?v0.30" type="text/css" />
 <link rel="stylesheet" href="/css/releases-template.css?v1.1" type="text/css" />
+
+{{else}}
 <link href="/css/bundle.min.css" rel="stylesheet" type="text/css" />
+<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" preload/>
+
 <link href="/css/navigation-minify.css" rel="stylesheet" type="text/css" />
 <link href="/css/Merriweather.css" rel="stylesheet" type="text/css" />
 <link href="/css/Titillium.css" rel="stylesheet" type="text/css" />
 <link href="/css/opensans.css" rel="stylesheet" type="text/css" />
--->
-
-
 
 {{end}}
 
-<!--
-
+<script src="/js/jquery-1.3.6.js?version=1.3.6"></script>
 <script type='text/javascript' language="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="/js/loadmore.min.js"></script>
--->
-<script src="/js/jquery-1.3.6.js?version=1.3.6"></script>
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-
-
 <script src="/js/bundle.min.js"></script>
 <script src="/js/dynabic.treeview.js"></script>
 <script src="/js/treeviewmanager.js"></script>
-
 <style type="text/css">
     #footer {
         bottom: 0 !important;
@@ -183,9 +167,7 @@
         background: #23527c!important;
         color: #eff9ff!important;
     }
-    .downloadandnotes a.btn.dwnam3 {
-        display: inline-block;
-    }
+
 </style>
 <!-- /Common CSS -->
 
@@ -199,7 +181,20 @@ const langarray = [];
 </script>
 <script type="text/javascript">
 
+    //jQuery.noConflict();
 
+    /*jQuery(document).ready(function () {
+        $('.siteTop_ContentContainer').find("button").click(function () {
+            $("#navbar-button").toggleClass("topbutton");
+
+        });
+
+        jQuery('#userControls').load('https://downloads.aspose.com/aslogininfo.aspx');
+
+        $("#userControls img").each(function () {
+            $(this).attr('src', "https://downloads.aspose.com/resources/aspose/img/transparent.png");
+        })
+    });*/
     jQuery(document).ready(function () {
 
 
@@ -231,13 +226,24 @@ $('.treeview-animated-items-header').click(function () {
 
   return false;
 });
+/*$elements.click(function () {
+    console.log('ddddd');
+  $this = $(this);
 
+  if ($this.hasClass('opened')) {
 
-});
+    $elements.removeClass('opened');
+  } else {
+
+    $elements.removeClass('opened');
+    $this.addClass('opened');
+  }
+})*/
+
+    });
 
 </script>
 
-<!--
 {{ if not (in .Site.BaseURL "-qa") }}
 {{ $googleAnalytics :=.Site.Params.GoogleAnalytics }}
 {{ $googletagmanager :=.Site.Params.googletagmanager }}
@@ -247,25 +253,20 @@ $('.treeview-animated-items-header').click(function () {
         gtag('js',new Date());gtag('config',{{ $googleAnalytics }});</script>
     {{ end }}
     {{ if $googletagmanager }}
-
+    <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
         new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
         j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','{{ $googletagmanager }}');</script>
-
+    <!-- End Google Tag Manager -->
     {{ end }}
 {{ end }}
--->
-
-<!--
 <link rel="stylesheet" href="/css/font-awesome.css">
--->
-
 <style>
     span.list-links > a:first-child::before, span.list-links > a:last-child::after {
     color: #212529;
-    /* margin: 0px 2px; */
+    /* margin: 0px 2px; farooq */
     font-size: 14px;
 }
 span.list-links > a:first-child::before{
@@ -274,12 +275,13 @@ span.list-links > a:first-child::before{
 span.list-links > a:last-child::after{
     content: ")";
 }
-.treeview span.indent { margin-left: 4px !important; margin-right: 4px !important; }
-.treeview span.icon { width: 7px !important; margin-right: 3px !important; }
-.treeview span.icon { width: 7px !important; margin-right: 5px !important; }
-li.list-group-item.node-tree a { font-size: 11px !important; }
-.list-group-item {padding: 10px 1px 10px 5px; }
 </style>
 
+{{ if .Page.Params.enable_ldjson }}
+{{$ldjson_filepath := print "layouts/partials/" .Page.Params.ldjson_path}}
+  {{ if (fileExists $ldjson_filepath) -}}
+    {{ partial .Page.Params.ldjson_path . }}
+    {{- end }}
+{{end}}
 
 </head>
