--- a/layouts/partials/repository/head-additions.html
+++ b/layouts/partials/repository/head-additions.html
@@ -1,3 +1,3 @@
 <!-- EMPTY -->
-<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />
-<script src="{{ "/res_repo/js/jquery-1.10.2.min.js" | absURL }}"></script>
+<link href="/css/bootstrap.css" rel="stylesheet" type="text/css"/>
+<script src='{{ "/res_repo/js/jquery-1.10.2.min.js" | absURL }}'></script>
