--- a/themes/downloads-common-theme/static/css/bootstrap.css
+++ b/themes/downloads-common-theme/static/css/bootstrap.css
@@ -7,4 +7,5 @@ summary::before{content: "\f0d7"; font-family: FontAwesome;padding-right: 10px; 
 details[open] > summary::before {content: "\f0d8"; }
 summary{background: #87ceeb44;border: 1px solid transparent;border-radius: 0.25rem;padding: 0.75rem 1.25rem;}
 details[open] summary{margin-bottom:10px;}.page-package-details h3, h4{color:#0593cb;}
+blockquote {padding: 10px 20px;margin: 0px 0px 20px;border-left: 5px solid rgb(238, 238, 238);}
   
