INP and CLS improveents
Added various changes for INP and CLS improvements.

--- a/themes/downloads-common-theme/layouts/index.html
+++ b/themes/downloads-common-theme/layouts/index.html
@@ -2,7 +2,7 @@
 
 <div itemprop="articleBody">
   <p></p>
-  <div class="smaller text-center mt-5 header-bg">
+  <div class="smaller text-center header-bg">
     <h1 class="mt-5 pt-4 font-40 pb-1 font-b text-white">
       {{ if not (eq .Params.hide_release_icon "yes") }}
       <i class="fa fa-inbox fa-2x">&nbsp; </i>
