--- a/layouts/partials/repository/site-end-of-body.html
+++ b/layouts/partials/repository/site-end-of-body.html
@@ -19,7 +19,7 @@
 
   <script>hljs.highlightAll();</script>
 
-      <link rel="stylesheet" type="text/css" href=="{{ "/res_repo/css/hugocustom.css" | absURL }}"/>
+      <link rel="stylesheet" type="text/css" href=="{{ "/res_repo/css/hugo custom.css" | absURL }}"/>
 
       <script>
 
