--- a/themes/downloads-common-theme/layouts/partials/footer.html
+++ b/themes/downloads-common-theme/layouts/partials/footer.html
@@ -66,10 +66,18 @@
 
  </script>
  
- <script src="/js/jquery-1.3.6.js?version=1.3.6"></script>
- <script type='text/javascript' language="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" async></script>
- <script src="/js/loadmore.min.js"></script>
+ <!--<script src="/js/jquery-1.3.6.js?version=1.3.6"></script>
+ <script type='text/javascript' language="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+ <script src="/js/loadmore.min.js"></script>-->
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
  
- <script src="/js/bundle.min.js" async></script>
- <script src="/js/dynabic.treeview.js" async></script>
+ 
+ <script src="/js/bundle.min.js"></script>
+ <script src="/js/dynabic.treeview.js"></script>
  <script src="/js/treeviewmanager.js"></script>
+ <script>
+  $('.dwnam3').on('click', function(e){
+    e.preventDefault();
+  }); 
+ </script>
+ 
