--- a/themes/downloads-common-theme/layouts/shortcodes/Common/consolebox.html
+++ b/themes/downloads-common-theme/layouts/shortcodes/Common/consolebox.html
@@ -1,4 +1,4 @@
 <div class="consolebox">
     {{ .Inner }}
-    <div class="copyclipboard pull-right"><button class="btn-copy btn btn-success" type="button" data-clipboard-action="copy" data-clipboard-target="#nuget"><i class="fa fa-clipboard">&nbsp;</i></button></div>
+    <div class="copyclipboard pull-right"><button class="btn-copy btn btn-success" type="button" data-clipboard-action="copy" data-clipboard-target="#nuget" title="Copy to Clipboard"><i class="fa fa-clipboard">&nbsp;</i></button></div>
 </div>
