More Fixes for INP and CLS Problems
More Fixes added for INP and CLS Problems and other optimizations to the HTML layouts.

--- a/themes/downloads-common-theme/layouts/partials/head.html
+++ b/themes/downloads-common-theme/layouts/partials/head.html
@@ -161,6 +161,8 @@ const langarray = [];
   {{- end -}}
 {{ end }}
 </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 <script type="text/javascript">
 
     //jQuery.noConflict();
@@ -244,8 +246,7 @@ $('.treeview-animated-items-header').click(function () {
     <!-- End Google Tag Manager -->
     {{ end }}
 {{ end }}
-<link rel="stylesheet" href="/css/font-awesome.css">
-<style>
+ <style>
     span.list-links > a:first-child::before, span.list-links > a:last-child::after {
     color: #212529;
     /* margin: 0px 2px; */
