--- a/themes/downloads-common-theme/layouts/partials/footer.html
+++ b/themes/downloads-common-theme/layouts/partials/footer.html
@@ -6,6 +6,8 @@
  <script>(function (i, s, o, g, r, a, m) { i['ContainerizeMenuObject'] = r; i[r] = i[r] || function () { (i[r].q = i[r].q || []).push(arguments) }, i[r].l = 1 * new Date(); a = s.createElement(o), m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.append(a) })(window, document, 'script', 'https://menu-new.containerize.com/scripts/engine.min.js?v=1.0.1', '{{ $dynamicmenuid }}');</script>
 {{ end }}
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
  <script>
      $(document).ready(function(){
     setTimeout(() => {
@@ -66,15 +68,11 @@
 
  </script>
  
- <!--<script src="/js/jquery-1.3.6.js?version=1.3.6"></script>
- <script type='text/javascript' language="javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
- <script src="/js/loadmore.min.js"></script>-->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
  
  
- <script src="/js/bundle.min.js"></script>
- <script src="/js/dynabic.treeview.js"></script>
- <script src="/js/treeviewmanager.js"></script>
+  <script src="/js/dynabic.treeview.js" async></script>
+  <script src="/js/treeviewmanager.js"></script>
+  <script src="/js/bundle.min.js"></script>
  <script>
   $('.dwnam3').on('click', function(e){
     e.preventDefault();
