More fixes added for INP and CLS
Added more INP and CLS fixes.

--- a/themes/downloads-common-theme/layouts/partials/langswitcher.html
+++ b/themes/downloads-common-theme/layouts/partials/langswitcher.html
@@ -1,5 +1,5 @@
 <div class="lang-selector" id="locale" style="display:none!important">
-    <a><em class="{{- .Language.Params.flag}}  flag-24"> </em>&nbsp; {{- .Language.LanguageName | title -}}</a>
+    <a href="#"><em class="{{- .Language.Params.flag}}  flag-24"> </em>&nbsp; {{- .Language.LanguageName | title -}}</a>
     </div>
     <div class="modal fade lanpopup" id="langModal" tabindex="-1" aria-labelledby="langModalLabel" data-nosnippet="" aria-modal="true" role="dialog" style="display:none">
   <div class="modal-dialog modal-dialog-centered modal-lg">
