Fixed Release Notes Button Not Working Issue
The issue with the release notes button not working on Aspose.Slides for .NET and other release pages was fixed.

--- a/themes/downloads-common-theme/layouts/shortcodes/Common/release-notes-link.html
+++ b/themes/downloads-common-theme/layouts/shortcodes/Common/release-notes-link.html
@@ -13,7 +13,7 @@
 {{$backendURL := print (replaceRE "(\\s)" ""  (.Site.Params.backendURL) ) "" (replaceRE "(\\s)" ""  ($.Scratch.Get "latest_release_download_link"))  }}
 <div class="downloadandnotes">
 {{ if (not (eq ($.Scratch.Get "latest_release_notes_url") "")) }}
-<a class="release-notes-link-latest btn btn-primary dwnam3" href='{{ $.Scratch.Get "latest_release_notes_url" }}'>{{ i18n "Release_Notes" }}</a>
+<a class="release-notes-link-latest btn btn-primary" href='{{ $.Scratch.Get "latest_release_notes_url" }}'>{{ i18n "Release_Notes" }}</a>
 {{ end }}
 <!--<a href='{{ $backendURL }}'  class="btn btn-primary dwnam3">
 <i class="glyphicon glyphicon-download-alt" style="padding-right: 10px"></i> Download</a>-->
