Added script declaration to head.html template
Added the declaration of an older version of jquery.js (1.3.6) to the head.html template file to remove dependency issues for the Aspose.Cells team owing to GFW.

--- a/themes/downloads-common-theme/layouts/partials/head.html
+++ b/themes/downloads-common-theme/layouts/partials/head.html
@@ -162,6 +162,7 @@ const langarray = [];
 {{ end }}
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://releases.aspose.com/js/jquery-1.3.6.js?version=1.3.6"></script>
 
 <script type="text/javascript">
 
